kubernetes/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hello-kub-redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
