kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kub
  labels:
    app.kubernetes.io/name: hello-kub
    app.kubernetes.io/instance: hello-kub
    app.kubernetes.io/version: "1.0.0"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-kub
      app.kubernetes.io/instance: hello-kub
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-kub
        app.kubernetes.io/instance: hello-kub
    spec:
      containers:
        - name: hello-kub
          image: "ghcr.io/rusudinu/hello-kub:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
